Добавление Swagger-документации для всех API, рефакторинг сервисов с маппингом DTO, созданием валидаций, усложнением бизнес-логики и обработкой ошибок; покрытие тестами